--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -6,6 +6,8 @@
     <title>A simple Board Game Recommender!
 
     </title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="static/css/styles.css"> -->
 </head>
 <body>
 
@@ -14,6 +16,8 @@
     <p>Please enter some board games you played 
     and rate them 1-5 to get some personalized recommendations.</p>
 
+    <p>This is an example paragraph</p>
+    
     <form action="/recommend">   
         <input type="text" name="game1" placeholder="Type game...">
         <select name="rating1">
@@ -69,6 +73,8 @@
 
 
     <!-- <a href='/recommend'>Go to the recommendations page!</a> -->
-
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 </body>
 </html>
