some front end changes

--- a/flask_app/static/CSS/styles.css
+++ b/flask_app/static/CSS/styles.css
@@ -9,9 +9,9 @@
 }
 
 .main-splash {
-  background-color: #62003C;
+  background-color: #3f5afb;
   height: 100vh;
-  color: #FFE4F8;
+  color: #3f5afb;
   display: flex;
   flex-direction: column;
   justify-content: center;
