change some color in CSS styling

--- a/flask_app/static/CSS/styles.css
+++ b/flask_app/static/CSS/styles.css
@@ -11,7 +11,7 @@
 .main-splash {
   background-color: #3f5afb;
   height: 100vh;
-  color: #3f5afb;
+  color: #FFE4F8;
   display: flex;
   flex-direction: column;
   justify-content: center;
