--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -33,6 +33,7 @@
         
                     <div class="input-group mb-3">
                     <div class="input-group-prepend", style="margin:auto;">
+                    <img src={{url_for('static', filename='catan.jpg')}} class="rounded mx-auto d-block" alt="Responsive Image" width="100" height="100">
                     <label class="input-group-text" for="inputGroupSelect01">{{ i }}</label>
                     </div>
                     <select name="{{ i }}">
