--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="static/css/styles.css">
 </head>
-	
+
 <body class="h-100">
 
 <section class="main-splash"
@@ -28,15 +28,15 @@
                     </svg>.
                 </p>
                 <!-- Input fields -->
-                
-                {% for i in games_html %}
-        
+
+                {% for game in games_html%}
+
                     <div class="input-group mb-3">
                     <div class="input-group-prepend", style="margin:auto;">
-                    <img src={{url_for('static', filename='catan.jpg')}} class="rounded mx-auto d-block" alt="Responsive Image" width="100" height="100">
-                    <label class="input-group-text" for="inputGroupSelect01">{{ i }}</label>
+                    <img src={{ game[1] }} class="rounded mx-auto d-block" alt="Responsive Image" width="200" height="200">
+                    <label class="input-group-text" for="inputGroupSelect01">{{ game[0] }}</label>
                     </div>
-                    <select name="{{ i }}">
+                    <select name="{{ game[0] }}">
                       <option selected>Rate the game....</option>
                         <option value="not played">haven't played</option>
                         <option value="1">1</option>
@@ -45,18 +45,18 @@
                         <option value="4">4</option>
                         <option value="5">5</option>
                     </select>
-            
+
                     </select>
                     {% endfor %}
-                    
+
                     <br>
-               
+
                     </div>
-                    
+
                     <input type="submit", align="center">
-                
-                
-                
+
+
+
                 <!-- End input fields -->
             </form>
             <!-- Form end -->
