--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -1,72 +1,139 @@
 <!DOCTYPE html>
-<html lang="en" class="h-100">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A simple Board Game Recommender!
-
-    </title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="static/css/styles.css">
+	<meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>BoredLameRecommender	</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400" rel="stylesheet" />    
+	<link href="static/CSS/templatemo-style.css" rel="stylesheet" />
 </head>
-
-<body class="h-100">
-
-<section class="main-splash"
-
-<div class="container h-100", align="center">
-    <div class="row h-100 d-flex justify-content-center align-items-center">
-        <div class="col-12 col-md-8 col-lg-6" "center-block">
-            <!-- Form -->
-            <form class="form-example" action="/recommend">
-                <h1> Welcome to our BoredLameRecommender</h1>
-                <p class="description">Please rate the board games below from 1 to 5 to get recommendations.
-                <br>In case you haven't played them all, don't worry.
-                <br>If you haven't played any of them, you shouldn't be here
-                    <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-emoji-wink-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                     <path fill-rule="evenodd" d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zM7 6.5C7 7.328 6.552 8 6 8s-1-.672-1-1.5S5.448 5 6 5s1 .672 1 1.5zM4.285 9.567a.5.5 0 0 1 .683.183A3.498 3.498 0 0 0 8 11.5a3.498 3.498 0 0 0 3.032-1.75.5.5 0 1 1 .866.5A4.498 4.498 0 0 1 8 12.5a4.498 4.498 0 0 1-3.898-2.25.5.5 0 0 1 .183-.683zm5.152-3.31a.5.5 0 0 0-.874.486c.33.595.958 1.007 1.687 1.007.73 0 1.356-.412 1.687-1.007a.5.5 0 0 0-.874-.486.934.934 0 0 1-.813.493.934.934 0 0 1-.813-.493z"/>
-                    </svg>.
-                </p>
-                <!-- Input fields -->
-
-                {% for game in games_html%}
-
-                    <div class="input-group mb-3">
-                    <div class="input-group-prepend", style="margin:auto;">
-                    <img src={{ game[1] }} class="rounded mx-auto d-block" alt="Responsive Image" width="200" height="200">
-                    <label class="input-group-text" for="inputGroupSelect01">{{ game[0] }}</label>
-                    </div>
-                    <select name="{{ game[0] }}">
-                      <option selected>Rate the game....</option>
-                        <option value="not played">haven't played</option>
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                    </select>
-
-                    </select>
-                    {% endfor %}
-
-                    <br>
-
-                    </div>
-
-                    <input type="submit", align="center">
+<!--
 
 
+-->
+<body> 
 
-                <!-- End input fields -->
-            </form>
-            <!-- Form end -->
-        </div>
-    </div>
-</div>
-</section>
-    <!-- <a href='/recommend'>Go to the recommendations page!</a> -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+	<div class="container">
+	<!-- Top box -->
+		<!-- Logo & Site Name -->
+		<div class="placeholder">
+			<div class="parallax-window" data-parallax="scroll" data-image-src="static/img/pawns.jpg">
+				<div class="tm-header">
+					<div class="row tm-header-inner">
+						<div class="col-md-6 col-12">
+							<img src="static/img/simple-house-logo.png" alt="Logo" class="tm-site-logo" /> 
+							<div class="tm-site-text-box">
+								<h1 class="tm-site-title">BoredLameRecommender</h1>
+<!-- 								<h6 class="tm-site-description">new restaurant template</h6>	
+ -->							</div>
+						</div>
+						<nav class="col-md-6 col-12 tm-nav">
+							<ul class="tm-nav-ul">
+<!-- 								<li class="tm-nav-li"><a href="index.html" class="tm-nav-link active">Home</a></li>
+								<li class="tm-nav-li"><a href="about.html" class="tm-nav-link">About</a></li>
+								<li class="tm-nav-li"><a href="contact.html" class="tm-nav-link">Contact</a></li> -->
+							</ul>
+						</nav>	
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<main>
+			<header class="row tm-welcome-section">
+				<h2 class="col-12 text-center tm-section-title">Welcome to our 
+					<br>Board Game Recommender</h2>
+				<p class="col-12 text-center">Please rate the board games below from 1 to 5 to get recommendations.
+					<br>In case you haven't played them all, don't worry.
+					<br>If you haven't played any of them, you shouldn't be here.</p>
+			</header>
+			
+<!-- 			<div class="tm-paging-links">
+				<nav>
+					<ul>
+						<li class="tm-paging-item"><a href="#" class="tm-paging-link active">Pizza</a></li>
+						<li class="tm-paging-item"><a href="#" class="tm-paging-link">Salad</a></li>
+						<li class="tm-paging-item"><a href="#" class="tm-paging-link">Noodle</a></li>
+					</ul>
+				</nav>
+			</div>
+ -->
+			<!-- Gallery -->
+			<div class="row tm-gallery">
+				<!-- gallery page 1 -->
+				<div id="tm-gallery-page-pizza" class="tm-gallery-page">
+
+					<form class="form" action="/recommend">
+						
+						{% for game in games_html%}
+
+						<article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
+							<figure>
+								<img src= {{ game[1] }} alt="Image" class="img-fluid tm-gallery-img" />
+								<figcaption>
+									<h4 class="tm-gallery-title", align="center">{{ game[0] }}</h4>
+									<select class="select-css" name="{{ game[0] }}">
+										<option selected>Rate the game....</option>
+										  <option value="not played">haven't played</option>
+										  <option value="1">1</option>
+										  <option value="2">2</option>
+										  <option value="3">3</option>
+										  <option value="4">4</option>
+										  <option value="5">5</option>
+									  </select>
+									
+								</figcaption>
+							</figure>
+						</article>
+						{% endfor %}
+
+						<input type="submit", align="center">
+					</form>
+					
+				
+				</div> <!-- gallery page 1 -->
+			</div>
+			<!-- <div class="tm-section tm-container-inner">
+				<div class="row">
+					<div class="col-md-6">
+						<figure class="tm-description-figure">
+							<img src="static/img/img-01.jpg" alt="Image" class="img-fluid" />
+						</figure>
+					</div>
+					<div class="col-md-6">
+						<div class="tm-description-box"> 
+							<h4 class="tm-gallery-title">Maecenas nulla neque</h4>
+							<p class="tm-mb-45">Redistributing this template as a downloadable ZIP file on any template collection site is strictly prohibited. You will need to <a rel="nofollow" href="https://templatemo.com/contact">talk to us</a> for additional permissions about our templates. Thank you.</p>
+							<a href="about.html" class="tm-btn tm-btn-default tm-right">Read More</a>
+						</div>
+					</div>
+				</div>
+			</div> -->
+		</main>
+
+		<footer class="tm-footer text-center">
+<!-- 			<p>Copyright &copy; 2020 Simple House 
+            
+            | Design: <a rel="nofollow" href="https://templatemo.com">TemplateMo</a></p> -->
+		</footer>
+	</div>
+	<script src="static/JS/jquery.min.js"></script>
+	<script src="static/JS/parallax.min.js"></script>
+	<script>
+		$(document).ready(function(){
+			// Handle click on paging links
+			$('.tm-paging-link').click(function(e){
+				e.preventDefault();
+				
+				var page = $(this).text().toLowerCase();
+				$('.tm-gallery-page').addClass('hidden');
+				$('#tm-gallery-page-' + page).removeClass('hidden');
+				$('.tm-paging-link').removeClass('active');
+				$(this).addClass("active");
+			});
+		});
+	</script>
 </body>
 </html>
