--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -89,7 +89,9 @@
 						</article>
 						{% endfor %}
 						<br>
-						<input type="submit" class="select-css", align="center">
+						<br>
+						<input type="submit" class="select-css" onclick="this.value='Calculating...'" value="Recommend!" id="button1" background-image=None>
+						<!-- <input type="submit" , align="center"> -->
 					</form>
 					
 				
