--- a/flask_app/templates/recommendations.html
+++ b/flask_app/templates/recommendations.html
@@ -79,21 +79,21 @@
 						<div class="tm-feature">
 							<i class="fas fa-4x fa-pepper-hot tm-feature-icon"></i>
 							<p class="tm-feature-description">Something about Ivo</p>
-							<a href="index.html" class="tm-btn tm-btn-primary">Ivo Albrecht</a>
+							<a href="/index" class="tm-btn tm-btn-primary">Ivo Albrecht</a>
 						</div>
 					</div>
 					<div class="col-lg-4">
 						<div class="tm-feature">
 							<i class="fas fa-4x fa-seedling tm-feature-icon"></i>
 							<p class="tm-feature-description">Something about Chris</p>
-							<a href="index.html" class="tm-btn tm-btn-success">Christoph Lenk</a>
+							<a href="/index" class="tm-btn tm-btn-success">Christoph Lenk</a>
 						</div>
 					</div>
 					<div class="col-lg-4">
 						<div class="tm-feature">
 							<i class="fas fa-4x fa-cocktail tm-feature-icon"></i>
 							<p class="tm-feature-description">Something about Hannes</p>
-							<a href="index.html" class="tm-btn tm-btn-danger">Hannes Muellner</a>
+							<a href="/index" class="tm-btn tm-btn-danger">Hannes Muellner</a>
 						</div>
 					</div>
 				</div>
