--- a/flask_app/templates/recommendations.html
+++ b/flask_app/templates/recommendations.html
@@ -5,9 +5,8 @@
 	<meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Simple House - About Page</title>
+    <title>BoredLameRecommender</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet" />
-    <link href="static/CSS/all.min.css" rel="stylesheet" />
 	<link href="static/CSS/templatemo-style.css" rel="stylesheet" />
 </head>
 
